--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,12 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="baeedf">  <td>21/09/16 14:08:42</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PatientTest.PatientTestDelete()[pri:0, instance:unittest.PatientTest@6c49835d]">PatientTestDelete</td> 
+<tr bgcolor="baeedf">  <td>21/09/21 13:59:56</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AppointmentTest.AppointmentTestDelete()[pri:0, instance:unittest.AppointmentTest@6c49835d]">AppointmentTestDelete</td> 
   <td>main@767010715</td>   <td></td> </tr>
-<tr bgcolor="baeedf">  <td>21/09/16 14:08:43</td>   <td>578</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PatientTest.PatientTestNew()[pri:0, instance:unittest.PatientTest@6c49835d]">PatientTestNew</td> 
+<tr bgcolor="baeedf">  <td>21/09/21 13:59:57</td>   <td>610</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AppointmentTest.AppointmentTestNew()[pri:0, instance:unittest.AppointmentTest@6c49835d]">AppointmentTestNew</td> 
   <td>main@767010715</td>   <td></td> </tr>
-<tr bgcolor="baeedf">  <td>21/09/16 14:08:43</td>   <td>593</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PatientTest.PatientTestRead()[pri:0, instance:unittest.PatientTest@6c49835d]">PatientTestRead</td> 
+<tr bgcolor="baeedf">  <td>21/09/21 13:59:57</td>   <td>638</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AppointmentTest.AppointmentTestRead()[pri:0, instance:unittest.AppointmentTest@6c49835d]">AppointmentTestRead</td> 
   <td>main@767010715</td>   <td></td> </tr>
-<tr bgcolor="baeedf">  <td>21/09/16 14:08:43</td>   <td>597</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PatientTest.PatientTestUpdate()[pri:0, instance:unittest.PatientTest@6c49835d]">PatientTestUpdate</td> 
+<tr bgcolor="baeedf">  <td>21/09/21 13:59:57</td>   <td>654</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AppointmentTest.AppointmentTestUpdate()[pri:0, instance:unittest.AppointmentTest@6c49835d]">AppointmentTestUpdate</td> 
   <td>main@767010715</td>   <td></td> </tr>
 </table>
