--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,13 +9,13 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="8">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">4</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">661</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">4</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">727</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="4">unittest.PatientTest</td><td><a href="#m0">PatientTestDelete</a></td><td rowspan="1">1631815722812</td><td rowspan="1">562</td></tr><tr class="passedeven"><td><a href="#m1">PatientTestNew</a></td><td rowspan="1">1631815723390</td><td rowspan="1">13</td></tr><tr class="passedeven"><td><a href="#m2">PatientTestRead</a></td><td rowspan="1">1631815723405</td><td rowspan="1">4</td></tr><tr class="passedeven"><td><a href="#m3">PatientTestUpdate</a></td><td rowspan="1">1631815723409</td><td rowspan="1">16</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="4">unittest.AppointmentTest</td><td><a href="#m0">AppointmentTestDelete</a></td><td rowspan="1">1632247196795</td><td rowspan="1">606</td></tr><tr class="passedeven"><td><a href="#m1">AppointmentTestNew</a></td><td rowspan="1">1632247197404</td><td rowspan="1">24</td></tr><tr class="passedeven"><td><a href="#m2">AppointmentTestRead</a></td><td rowspan="1">1632247197432</td><td rowspan="1">10</td></tr><tr class="passedeven"><td><a href="#m3">AppointmentTestUpdate</a></td><td rowspan="1">1632247197448</td><td rowspan="1">30</td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">unittest.PatientTest#PatientTestDelete</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">unittest.PatientTest#PatientTestNew</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m2">unittest.PatientTest#PatientTestRead</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m3">unittest.PatientTest#PatientTestUpdate</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Default test</h2><h3 id="m0">unittest.AppointmentTest#AppointmentTestDelete</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">unittest.AppointmentTest#AppointmentTestNew</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">unittest.AppointmentTest#AppointmentTestRead</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m3">unittest.AppointmentTest#AppointmentTestUpdate</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
