--- a/test-output/index.html
+++ b/test-output/index.html
@@ -51,7 +51,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Default_suite">
-                    <span>C:\Users\heeme\AppData\Local\Temp\testng-eclipse-906310329\testng-customsuite.xml</span>
+                    <span>C:\Users\heeme\AppData\Local\Temp\testng-eclipse--1078152951\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -104,22 +104,22 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="unittest.PatientTest" hash-for-method="PatientTestDelete">PatientTestDelete</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="unittest.AppointmentTest" hash-for-method="AppointmentTestDelete">AppointmentTestDelete</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="unittest.PatientTest" hash-for-method="PatientTestNew">PatientTestNew</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="unittest.AppointmentTest" hash-for-method="AppointmentTestNew">AppointmentTestNew</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="unittest.PatientTest" hash-for-method="PatientTestRead">PatientTestRead</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="unittest.AppointmentTest" hash-for-method="AppointmentTestRead">AppointmentTestRead</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="unittest.PatientTest" hash-for-method="PatientTestUpdate">PatientTestUpdate</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="unittest.AppointmentTest" hash-for-method="AppointmentTestUpdate">AppointmentTestUpdate</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -137,35 +137,35 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">unittest.PatientTest</span>
+              <span class="class-name">unittest.AppointmentTest</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="PatientTestDelete">
-                  </a> <!-- PatientTestDelete -->
-                  <span class="method-name">PatientTestDelete</span>
+                  <a name="AppointmentTestDelete">
+                  </a> <!-- AppointmentTestDelete -->
+                  <span class="method-name">AppointmentTestDelete</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="PatientTestNew">
-                  </a> <!-- PatientTestNew -->
-                  <span class="method-name">PatientTestNew</span>
+                  <a name="AppointmentTestNew">
+                  </a> <!-- AppointmentTestNew -->
+                  <span class="method-name">AppointmentTestNew</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="PatientTestRead">
-                  </a> <!-- PatientTestRead -->
-                  <span class="method-name">PatientTestRead</span>
+                  <a name="AppointmentTestRead">
+                  </a> <!-- AppointmentTestRead -->
+                  <span class="method-name">AppointmentTestRead</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="PatientTestUpdate">
-                  </a> <!-- PatientTestUpdate -->
-                  <span class="method-name">PatientTestUpdate</span>
+                  <a name="AppointmentTestUpdate">
+                  </a> <!-- AppointmentTestUpdate -->
+                  <span class="method-name">AppointmentTestUpdate</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -173,7 +173,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\heeme\AppData\Local\Temp\testng-eclipse-906310329\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\heeme\AppData\Local\Temp\testng-eclipse--1078152951\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -182,7 +182,7 @@
 &lt;suite guice-stage=&quot;DEVELOPMENT&quot; name=&quot;Default suite&quot;&gt;
   &lt;test thread-count=&quot;5&quot; verbose=&quot;2&quot; name=&quot;Default test&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;unittest.PatientTest&quot;/&gt;
+      &lt;class name=&quot;unittest.AppointmentTest&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -224,26 +224,26 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(4);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'PatientTestDelete')
-data.setCell(0, 2, 'unittest.PatientTest')
-data.setCell(0, 3, 562);
+data.setCell(0, 1, 'AppointmentTestDelete')
+data.setCell(0, 2, 'unittest.AppointmentTest')
+data.setCell(0, 3, 606);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'PatientTestUpdate')
-data.setCell(1, 2, 'unittest.PatientTest')
-data.setCell(1, 3, 16);
+data.setCell(1, 1, 'AppointmentTestUpdate')
+data.setCell(1, 2, 'unittest.AppointmentTest')
+data.setCell(1, 3, 30);
 data.setCell(2, 0, 2)
-data.setCell(2, 1, 'PatientTestNew')
-data.setCell(2, 2, 'unittest.PatientTest')
-data.setCell(2, 3, 13);
+data.setCell(2, 1, 'AppointmentTestNew')
+data.setCell(2, 2, 'unittest.AppointmentTest')
+data.setCell(2, 3, 24);
 data.setCell(3, 0, 3)
-data.setCell(3, 1, 'PatientTestRead')
-data.setCell(3, 2, 'unittest.PatientTest')
-data.setCell(3, 3, 4);
+data.setCell(3, 1, 'AppointmentTestRead')
+data.setCell(3, 2, 'unittest.AppointmentTest')
+data.setCell(3, 3, 10);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 595 ms</span>
+              <span class="suite-total-time">Total running time: 670 ms</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -269,22 +269,22 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">unittest.PatientTest</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">unittest.AppointmentTest</div> <!-- chronological-class-name -->
               <div class="test-method">
-                <span class="method-name">PatientTestDelete</span>
+                <span class="method-name">AppointmentTestDelete</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
-                <span class="method-name">PatientTestNew</span>
-                <span class="method-start">578 ms</span>
+                <span class="method-name">AppointmentTestNew</span>
+                <span class="method-start">609 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
-                <span class="method-name">PatientTestRead</span>
-                <span class="method-start">593 ms</span>
+                <span class="method-name">AppointmentTestRead</span>
+                <span class="method-start">637 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
-                <span class="method-name">PatientTestUpdate</span>
-                <span class="method-start">597 ms</span>
+                <span class="method-name">AppointmentTestUpdate</span>
+                <span class="method-start">653 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
