--- a/test-output/index.html
+++ b/test-output/index.html
@@ -51,7 +51,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Default_suite">
-                    <span>C:\Users\heeme\AppData\Local\Temp\testng-eclipse--1078152951\testng-customsuite.xml</span>
+                    <span>C:\Users\heeme\AppData\Local\Temp\testng-eclipse--1311140034\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -173,7 +173,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\heeme\AppData\Local\Temp\testng-eclipse--1078152951\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\heeme\AppData\Local\Temp\testng-eclipse--1311140034\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -226,24 +226,24 @@ data.addRows(4);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'AppointmentTestDelete')
 data.setCell(0, 2, 'unittest.AppointmentTest')
-data.setCell(0, 3, 606);
+data.setCell(0, 3, 652);
 data.setCell(1, 0, 1)
 data.setCell(1, 1, 'AppointmentTestUpdate')
 data.setCell(1, 2, 'unittest.AppointmentTest')
-data.setCell(1, 3, 30);
+data.setCell(1, 3, 225);
 data.setCell(2, 0, 2)
-data.setCell(2, 1, 'AppointmentTestNew')
+data.setCell(2, 1, 'AppointmentTestRead')
 data.setCell(2, 2, 'unittest.AppointmentTest')
-data.setCell(2, 3, 24);
+data.setCell(2, 3, 116);
 data.setCell(3, 0, 3)
-data.setCell(3, 1, 'AppointmentTestRead')
+data.setCell(3, 1, 'AppointmentTestNew')
 data.setCell(3, 2, 'unittest.AppointmentTest')
-data.setCell(3, 3, 10);
+data.setCell(3, 3, 60);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 670 ms</span>
+              <span class="suite-total-time">Total running time: 1 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -276,15 +276,15 @@ return data;
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">AppointmentTestNew</span>
-                <span class="method-start">609 ms</span>
+                <span class="method-start">655 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">AppointmentTestRead</span>
-                <span class="method-start">637 ms</span>
+                <span class="method-start">716 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">AppointmentTestUpdate</span>
-                <span class="method-start">653 ms</span>
+                <span class="method-start">833 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
