--- a/test-output/index.html
+++ b/test-output/index.html
@@ -51,7 +51,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Default_suite">
-                    <span>C:\Users\heeme\AppData\Local\Temp\testng-eclipse--1311140034\testng-customsuite.xml</span>
+                    <span>C:\Users\heeme\AppData\Local\Temp\testng-eclipse--1015596889\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -104,22 +104,22 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="unittest.AppointmentTest" hash-for-method="AppointmentTestDelete">AppointmentTestDelete</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="tests.AppointmentTest" hash-for-method="AppointmentTestDelete">AppointmentTestDelete</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="unittest.AppointmentTest" hash-for-method="AppointmentTestNew">AppointmentTestNew</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="tests.AppointmentTest" hash-for-method="AppointmentTestNew">AppointmentTestNew</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="unittest.AppointmentTest" hash-for-method="AppointmentTestRead">AppointmentTestRead</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="tests.AppointmentTest" hash-for-method="AppointmentTestRead">AppointmentTestRead</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="unittest.AppointmentTest" hash-for-method="AppointmentTestUpdate">AppointmentTestUpdate</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="tests.AppointmentTest" hash-for-method="AppointmentTestUpdate">AppointmentTestUpdate</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -137,7 +137,7 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">unittest.AppointmentTest</span>
+              <span class="class-name">tests.AppointmentTest</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
@@ -173,7 +173,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\heeme\AppData\Local\Temp\testng-eclipse--1311140034\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\heeme\AppData\Local\Temp\testng-eclipse--1015596889\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -182,7 +182,7 @@
 &lt;suite guice-stage=&quot;DEVELOPMENT&quot; name=&quot;Default suite&quot;&gt;
   &lt;test thread-count=&quot;5&quot; verbose=&quot;2&quot; name=&quot;Default test&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;unittest.AppointmentTest&quot;/&gt;
+      &lt;class name=&quot;tests.AppointmentTest&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -225,20 +225,20 @@ data.addColumn('number', 'Time (ms)');
 data.addRows(4);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'AppointmentTestDelete')
-data.setCell(0, 2, 'unittest.AppointmentTest')
-data.setCell(0, 3, 652);
+data.setCell(0, 2, 'tests.AppointmentTest')
+data.setCell(0, 3, 709);
 data.setCell(1, 0, 1)
 data.setCell(1, 1, 'AppointmentTestUpdate')
-data.setCell(1, 2, 'unittest.AppointmentTest')
-data.setCell(1, 3, 225);
+data.setCell(1, 2, 'tests.AppointmentTest')
+data.setCell(1, 3, 221);
 data.setCell(2, 0, 2)
 data.setCell(2, 1, 'AppointmentTestRead')
-data.setCell(2, 2, 'unittest.AppointmentTest')
-data.setCell(2, 3, 116);
+data.setCell(2, 2, 'tests.AppointmentTest')
+data.setCell(2, 3, 119);
 data.setCell(3, 0, 3)
 data.setCell(3, 1, 'AppointmentTestNew')
-data.setCell(3, 2, 'unittest.AppointmentTest')
-data.setCell(3, 3, 60);
+data.setCell(3, 2, 'tests.AppointmentTest')
+data.setCell(3, 3, 113);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
@@ -269,22 +269,22 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">unittest.AppointmentTest</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">tests.AppointmentTest</div> <!-- chronological-class-name -->
               <div class="test-method">
                 <span class="method-name">AppointmentTestDelete</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">AppointmentTestNew</span>
-                <span class="method-start">655 ms</span>
+                <span class="method-start">712 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">AppointmentTestRead</span>
-                <span class="method-start">716 ms</span>
+                <span class="method-start">826 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">AppointmentTestUpdate</span>
-                <span class="method-start">833 ms</span>
+                <span class="method-start">947 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
