--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,13 +9,13 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="8">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">4</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">1,091</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">4</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">1,212</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="4">unittest.AppointmentTest</td><td><a href="#m0">AppointmentTestDelete</a></td><td rowspan="1">1632332752887</td><td rowspan="1">652</td></tr><tr class="passedeven"><td><a href="#m1">AppointmentTestNew</a></td><td rowspan="1">1632332753542</td><td rowspan="1">60</td></tr><tr class="passedeven"><td><a href="#m2">AppointmentTestRead</a></td><td rowspan="1">1632332753603</td><td rowspan="1">116</td></tr><tr class="passedeven"><td><a href="#m3">AppointmentTestUpdate</a></td><td rowspan="1">1632332753720</td><td rowspan="1">225</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="4">tests.AppointmentTest</td><td><a href="#m0">AppointmentTestDelete</a></td><td rowspan="1">1633363356206</td><td rowspan="1">709</td></tr><tr class="passedeven"><td><a href="#m1">AppointmentTestNew</a></td><td rowspan="1">1633363356918</td><td rowspan="1">113</td></tr><tr class="passedeven"><td><a href="#m2">AppointmentTestRead</a></td><td rowspan="1">1633363357032</td><td rowspan="1">119</td></tr><tr class="passedeven"><td><a href="#m3">AppointmentTestUpdate</a></td><td rowspan="1">1633363357153</td><td rowspan="1">221</td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">unittest.AppointmentTest#AppointmentTestDelete</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">unittest.AppointmentTest#AppointmentTestNew</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m2">unittest.AppointmentTest#AppointmentTestRead</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m3">unittest.AppointmentTest#AppointmentTestUpdate</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Default test</h2><h3 id="m0">tests.AppointmentTest#AppointmentTestDelete</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">tests.AppointmentTest#AppointmentTestNew</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">tests.AppointmentTest#AppointmentTestRead</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m3">tests.AppointmentTest#AppointmentTestUpdate</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
