--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,12 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="ab7c62">  <td>21/09/22 13:45:53</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AppointmentTest.AppointmentTestNew()[pri:0, instance:unittest.AppointmentTest@a7e666]">AppointmentTestNew</td> 
+<tr bgcolor="ab7c62">  <td>21/10/04 12:02:36</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AppointmentTest.AppointmentTestNew()[pri:0, instance:tests.AppointmentTest@a7e666]">AppointmentTestNew</td> 
   <td>main@1177377518</td>   <td></td> </tr>
-<tr bgcolor="ab7c62">  <td>21/09/22 13:45:53</td>   <td>178</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AppointmentTest.AppointmentTestUpdate()[pri:0, instance:unittest.AppointmentTest@a7e666]">AppointmentTestUpdate</td> 
+<tr bgcolor="ab7c62">  <td>21/10/04 12:02:37</td>   <td>236</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AppointmentTest.AppointmentTestUpdate()[pri:0, instance:tests.AppointmentTest@a7e666]">AppointmentTestUpdate</td> 
   <td>main@1177377518</td>   <td></td> </tr>
-<tr bgcolor="ab7c62">  <td>21/09/22 13:45:52</td>   <td>-656</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AppointmentTest.AppointmentTestDelete()[pri:0, instance:unittest.AppointmentTest@a7e666]">AppointmentTestDelete</td> 
+<tr bgcolor="ab7c62">  <td>21/10/04 12:02:36</td>   <td>-712</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AppointmentTest.AppointmentTestDelete()[pri:0, instance:tests.AppointmentTest@a7e666]">AppointmentTestDelete</td> 
   <td>main@1177377518</td>   <td></td> </tr>
-<tr bgcolor="ab7c62">  <td>21/09/22 13:45:53</td>   <td>61</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AppointmentTest.AppointmentTestRead()[pri:0, instance:unittest.AppointmentTest@a7e666]">AppointmentTestRead</td> 
+<tr bgcolor="ab7c62">  <td>21/10/04 12:02:37</td>   <td>115</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AppointmentTest.AppointmentTestRead()[pri:0, instance:tests.AppointmentTest@a7e666]">AppointmentTestRead</td> 
   <td>main@1177377518</td>   <td></td> </tr>
 </table>
